# COMP282_A1

./: CMakeLists.txt  DenseTuringMachine.cpp  DenseTuringMachine.h  Main.cpp  MenuSystem.cpp  MenuSystem.h  SparseTuringMachine.cpp  SparseTuringMachine.h  TuringMachine.h  TuringMachineState.cpp  TuringMachineState.h  TuringTape.cpp  TuringTape.h
282/: CMakeLists.txt  DenseTuringMachine.cpp  DenseTuringMachine.h  Main.cpp  MenuSystem.h  SparseTuringMachine.h  TuringMachine.cpp  TuringMachineState  TuringMachineState.cpp  TuringMachineState.h  TuringTape.h
