cmake_minimum_required(VERSION 3.24)
project(282)

set(CMAKE_CXX_STANDARD 11)

add_executable(282 main.cpp " DenseTuringMachine.cpp" " DenseTuringMachine.h" cmake-build-debug/TuringTape.h TuringTape.h SparseTuringMachine.h MenuSystem.h TuringMachineState.cpp TuringMachineState.h TuringMachineState.cpp TuringMachineState.cpp TuringMachineState.cpp TuringMachineState.cpp TuringMachine.cpp TuringMachine.h DenseTuringMachine.cpp)
